--- a/search.html
+++ b/search.html
@@ -14,8 +14,8 @@
 <body>
 
     <div class="menu">
-        <a href=""C:\Users\shree\OneDrive - Southern Cross University\Documents\GitHub\Web_Development_II_Ass2-\index.html"">Home</a>
-        <a href=""C:\Users\shree\OneDrive - Southern Cross University\Documents\GitHub\Web_Development_II_Ass2-\search.html"">Search Fundraisers</a>
+        <a href="index.html"">Home</a>
+        <a href="search.html">Search Fundraisers</a>
     </div>
 
     <h1>Search Fundraisers</h1>
@@ -50,7 +50,7 @@
     const query = `http://localhost:3000/fundraisers?organizer=${encodeURIComponent(organizer)}&city=${encodeURIComponent(city)}&category=${encodeURIComponent(category)}`;
 
 
-    fetch(query)  // Removed 'no-cors' mode
+    fetch(query)  
         .then(response => {
             if (!response.ok) {
                 throw new Error('Network response was not ok ' + response.statusText);
