--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 <body>
 
     <div class="menu">
-        <a href="/">Home</a>
-        <a href="/search.html">Search Fundraisers</a>
+        <a href="index.html">Home</a>
+        <a href="fundraiser.html">Home</a>
+        <a href="search.html">Search Fundraisers</a>
     </div>
 
     <h1>Welcome to Our Non-profit Crowdfunding Platform</h1>
