--- a/fundraiser.html
+++ b/fundraiser.html
@@ -5,50 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundraiser Details</title>
     <style>
-        body { font-family: Arial, sans-serif; }
-        .fundraiser { margin: 20px 0; padding: 20px; border: 1px solid #ddd; border-radius: 5px; }
+        body { font-family: Arial, sans-serif; margin: 20px; }
         .menu { margin-bottom: 20px; }
         .menu a { margin-right: 10px; text-decoration: none; color: #007BFF; }
+        .fundraiser-details { border: 1px solid #ddd; padding: 20px; border-radius: 5px; width: 100%; max-width: 600px; }
+        .fundraiser-details h2 { margin-top: 0; }
+        .fundraiser-details p { margin: 5px 0; }
+        .donate-btn { background-color: #28a745; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer; }
+        .donate-btn:hover { background-color: #218838; }
     </style>
 </head>
 <body>
 
     <div class="menu">
-        <a href="/">Home</a>
-        <a href="/search.html">Search Fundraisers</a>
+        <a href="index.html">Home</a>
+        <a href="search.html">Search Fundraisers</a>
     </div>
 
-    <h1>Fundraiser Details</h1>
-    <div id="fundraiser"></div>
+    <div id="fundraiserContainer" class="fundraiser-details">
+        <h2>Loading fundraiser details...</h2>
+    </div>
 
     <script>
-        const urlParams = new URLSearchParams(window.location.search);
-        const fundraiserId = urlParams.get('id');
-
-        if (!fundraiserId) {
-            document.getElementById('fundraiser').innerHTML = '<p>Fundraiser not found.</p>';
-        } else {
-            fetch(`/fundraiser/${fundraiserId}`)
-            .then(response => response.json())
-            .then(data => {
-                if (data.length === 0) {
-                    document.getElementById('fundraiser').innerHTML = '<p>Fundraiser not found.</p>';
-                } else {
-                    const fundraiser = data[0];
-                    const div = document.createElement('div');
-                    div.className = 'fundraiser';
-                    div.innerHTML = `<h2>${fundraiser.CAPTION}</h2>
-                                     <p><strong>Organized by:</strong> ${fundraiser.ORGANIZER}</p>
-                                     <p><strong>Target Funding:</strong> ${fundraiser.TARGET_FUNDING} AUD</p>
-                                     <p><strong>Current Funding:</strong> ${fundraiser.CURRENT_FUNDING} AUD</p>
-                                     <p><strong>City:</strong> ${fundraiser.CITY}</p>
-                                     <p><strong>Category:</strong> ${fundraiser.CATEGORY}</p>
-                                     <button onclick="alert('This feature is under construction')">Donate</button>`;
-                    document.getElementById('fundraiser').appendChild(div);
-                }
-            });
+        // Function to retrieve query parameters
+        function getQueryParams() {
+            const params = new URLSearchParams(window.location.search);
+            return {
+                id: params.get('id')
+            };
         }
-    </script>
 
+        // Function to fetch and display fundraiser details
+        function loadFundraiserDetails() {
+            const { id } = getQueryParams();  // Get the fundraiser ID from query string
+            if (!id) {
+                document.getElementById('fundraiserContainer').innerHTML = "<p style='color: red;'>No fundraiser selected.</p>";
+                return;
+            }
+
+            const query = `http://localhost:3000/fundraiser/${id}`;
+            
+            fetch(query)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok ' + response.statusText);
+                    }
+                    return response.json();
+                })
+                .then(data => {
+                    if (data.length === 0) {
+                        document.getElementById('fundraiserContainer').innerHTML = "<p style='color: red;'>Fundraiser not found.</p>";
+                    } else {
+                        const fundraiser = data[0];  // Only one fundraiser is expected
+                        displayFundraiserDetails(fundraiser);
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    document.getElementById('fundraiserContainer').innerHTML = `<p style="color: red;">An error occurred: ${error.message}</p>`;
+                });
+        }
+
+        // Function to display fundraiser details
+        function displayFundraiserDetails(fundraiser) {
+            const container = document.getElementById('fundraiserContainer');
+            container.innerHTML = `
+                <h2>${fundraiser.CAPTION}</h2>
+                <p><strong>Organizer:</strong> ${fundraiser.ORGANIZER}</p>
+                <p><strong>City:</strong> ${fundraiser.CITY}</p>
+                <p><strong>Category:</strong> ${fundraiser.CATEGORY}</p>
+                <p><strong>Description:</strong> ${fundraiser.DESCRIPTION}</p>
+                <button class="donate-btn" onclick="showDonateDialog()">Donate</button>
+            `;
+        }
+
+        // Function to show "Donate" dialog
+        function showDonateDialog() {
+            alert("This feature is under construction");
+        }
+
+        // Load the fundraiser details on page load
+        window.onload = loadFundraiserDetails;
+
+    </script>
 </body>
 </html>
