--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="menu">
         <a href="index.html">Home</a>
-        <a href="fundraiser.html">Home</a>
+        <a href="fundraiser.html">Fundraisers</a>
         <a href="search.html">Search Fundraisers</a>
     </div>
 
