--- a/fundraiser.html
+++ b/fundraiser.html
@@ -6,28 +6,42 @@
     <title>Fundraiser Details</title>
     <style>
         body { font-family: Arial, sans-serif; }
+        .menu { margin-bottom: 20px; }
+        .menu a { margin-right: 10px; text-decoration: none; color: #007BFF; }
         .fundraiser { margin: 20px; padding: 20px; border: 1px solid #ddd; border-radius: 5px; }
-        .donate-button { margin-top: 20px; padding: 10px 20px; background-color: #007BFF; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        .donate-button { background-color: #007BFF; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; }
+        .donate-button:hover { background-color: #0056b3; }
     </style>
 </head>
 <body>
 
+    <div class="menu">
+        <a href="index.html">Home</a>
+        <a href="search.html">Search Fundraisers</a>
+    </div>
+
+    <h1>Fundraiser Details</h1>
     <div id="fundraiser" class="fundraiser"></div>
 
     <script>
-        function getFundraiserDetails() {
-            const urlParams = new URLSearchParams(window.location.search);
-            const id = urlParams.get('id');
+        function getFundraiserId() {
+            const params = new URLSearchParams(window.location.search);
+            return params.get('id');
+            
+        }
 
-            if (!id) {
-                document.getElementById('fundraiser').innerHTML = '<p style="color: red;">No fundraiser ID provided.</p>';
+        function fetchFundraiserDetails() {
+            const fundraiserId = getFundraiserId();
+            if (!fundraiserId) {
+                document.getElementById('fundraiser').innerHTML = '<p>Fundraiser ID not provided.</p>';
                 return;
             }
 
-            fetch(`http://localhost:3000/fundraiser/${id}`)
+            const query = `http://localhost:3000/fundraiser/${fundraiserId}`;
+            fetch(query)
                 .then(response => {
                     if (!response.ok) {
-                        throw new Error('Network response was not ok');
+                        throw new Error('Network response was not ok ' + response.statusText);
                     }
                     return response.json();
                 })
@@ -35,14 +49,14 @@
                     if (data.length === 0) {
                         document.getElementById('fundraiser').innerHTML = '<p style="color: red;">Fundraiser not found.</p>';
                     } else {
-                        const fundraiser = data[0];
+                        const fundraiser = data[1];  // Assuming the API returns an array
                         document.getElementById('fundraiser').innerHTML = `
                             <h2>${fundraiser.CAPTION}</h2>
-                            <p><strong>Organizer:</strong> ${fundraiser.ORGANIZER}</p>
-                            <p><strong>City:</strong> ${fundraiser.CITY}</p>
-                            <p><strong>Category:</strong> ${fundraiser.CATEGORY}</p>
-                            <p><strong>Description:</strong> ${fundraiser.DESCRIPTION}</p>
-                            <button class="donate-button" onclick="donate()">Donate</button>
+                            <p>Organized by: ${fundraiser.ORGANIZER}</p>
+                            <p>City: ${fundraiser.CITY}</p>
+                            <p>Category: ${fundraiser.CATEGORY}</p>
+                            <p>Description: ${fundraiser.DESCRIPTION}</p>
+                            <button class="donate-button" onclick="showDonateMessage()">Donate</button>
                         `;
                     }
                 })
@@ -52,12 +66,12 @@
                 });
         }
 
-        function donate() {
-            alert("This feature is under construction.");
+        function showDonateMessage() {
+            alert('This feature is under construction.');
         }
 
         // Fetch fundraiser details on page load
-        getFundraiserDetails();
+        fetchFundraiserDetails();
     </script>
 
 </body>
