--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
 
     <div class="menu">
         <a href="index.html">Home</a>
-        <a href="search.html">Search Fundraisers</a>
+        <a href="search.html">Fundraisers</a>
     </div>
 
     <h1>Search Fundraisers</h1>
@@ -77,7 +77,7 @@
                                 <p>Organized by: ${fundraiser.ORGANIZER}</p>
                                 <p>City: ${fundraiser.CITY}</p>
                                 <p>Category: ${fundraiser.CATEGORY}</p>
-                                <a href="http://localhost:3000/fundraiser/${fundraiser.FUNDRAISER_ID}">View Details</a>`;
+                                <a href="fundraiser.html">View Details</a>`;
                             container.appendChild(div);
                         });
                     }
