--- a/search.html
+++ b/search.html
@@ -77,7 +77,7 @@
                                 <p>Organized by: ${fundraiser.ORGANIZER}</p>
                                 <p>City: ${fundraiser.CITY}</p>
                                 <p>Category: ${fundraiser.CATEGORY}</p>
-                                <a href="fundraiser.html">View Details</a>`;
+                                <a href="fundraiser.html?id=${fundraiser.FUNDRAISER_ID}">View Details</a>`;  <!-- Pass FUNDRAISER_ID in the URL -->
                             container.appendChild(div);
                         });
                     }
