--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <div class="menu">
         <a href="index.html">Home</a>
-        <a href="fundraiser.html">Fundraisers</a>
-        <a href="search.html">Search Fundraisers</a>
+        <a href="search.html">Fundraisers</a>
     </div>
 
     <h1>Welcome to Our Non-profit Crowdfunding Platform</h1>
