--- a/index.html
+++ b/index.html
@@ -5,25 +5,120 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crowdfunding Platform - Home</title>
     <style>
-        body { font-family: Arial, sans-serif; }
-        .fundraiser { margin: 20px 0; padding: 20px; border: 1px solid #ddd; border-radius: 5px; }
-        .fundraiser img { max-width: 100%; height: auto; }
-        .menu { margin-bottom: 20px; }
-        .menu a { margin-right: 10px; text-decoration: none; color: #007BFF; }
+        body { 
+            font-family: 'Arial', sans-serif; 
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+
+        .banner {
+            background-image: url('https://thumbs.dreamstime.com/z/blue-tape-fundraiser-caption-fundraiser-text-ribbon-designed-white-title-blue-tape-vector-banner-133979184.jpg?ct=jpeg');
+            background-size: cover;
+            background-position: center;
+            height: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding-top: 300px;
+            padding-bottom: 100px;
+
+        }
+
+      
+
+        .menu {
+            text-align: center;
+            background-color: #007BFF;
+            padding: 10px;
+        }
+
+        .menu a {
+            margin-right: 20px;
+            text-decoration: none;
+            color: white;
+            font-size: 18px;
+        }
+
+        .content {
+            max-width: 1200px;
+            margin: 20px auto;
+            padding: 20px;
+        }
+
+        .fundraiser {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .fundraiser img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+
+        .fundraiser h2 {
+            font-size: 24px;
+            color: #333;
+        }
+
+        .fundraiser p {
+            font-size: 16px;
+            color: #555;
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #007BFF;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .button:hover {
+            background-color: #0056b3;
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #007BFF;
+            color: white;
+            margin-top: 20px;
+        }
     </style>
 </head>
 <body>
 
+    <!-- Banner Section -->
+    <div class="banner">
+       
+    </div>
+
+    <!-- Navigation Menu -->
     <div class="menu">
         <a href="index.html">Home</a>
         <a href="search.html">Fundraisers</a>
     </div>
 
-    <h1>Welcome to Our Non-profit Crowdfunding Platform</h1>
-    <p>We connect individuals and organizations to help raise funds for a variety of causes. Whether you're supporting a local charity or a global movement, we provide a secure platform to make an impact.</p>
+    <!-- Main Content -->
+    <div class="content">
+        <h2>Latest Fundraisers</h2>
+        <div id="fundraisers"></div>
+    </div>
 
-    <div id="fundraisers"></div>
+    <!-- Footer -->
+    <footer>
+        &copy; 2024 Crowdfunding Platform. All Rights Reserved.
+    </footer>
 
+    <!-- JavaScript to Fetch and Display Fundraisers -->
     <script>
         fetch('/fundraisers')
         .then(response => response.json())
@@ -52,4 +147,3 @@
 
 </body>
 </html>
-
