--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             background-size: cover;
             text-align: center;
             padding: 60px 20px;
-            color: white;
+            color: rgb(0, 0, 0);
         }
         .banner h1 {
             font-size: 3em;
@@ -90,21 +90,6 @@
 
     <div class="container">
 
-        <!-- Static content: General information -->
-        <div class="welcome-section">
-            <h2>About Us</h2>
-            <p>We are dedicated to supporting individuals and communities in need. From medical emergencies to education, 
-            disaster relief, and more, we provide a platform where people can make a difference by contributing to important causes.</p>
-            <p>Through our crowdfunding platform, we ensure that funds go directly to those who need it most, enabling 
-            real change and tangible impact.</p>
-        </div>
-
-        <div class="contact-info">
-            <h2>Contact Us</h2>
-            <p><strong>Email:</strong> support@nonprofitcrowdfunding.com</p>
-            <p><strong>Phone:</strong> +1 (800) 123-4567</p>
-            <p><strong>Address:</strong> 123 Charity Road, Kindness City, Hope State, 45678</p>
-        </div>
 
         <!-- Dynamic content: Active fundraisers -->
         <h2>Active Fundraisers</h2>
@@ -148,5 +133,20 @@
         });
     </script>
 
+        <!-- Static content: General information -->
+        <div class="welcome-section">
+            <h2>About Us</h2>
+            <p>We are dedicated to supporting individuals and communities in need. From medical emergencies to education, 
+            disaster relief, and more, we provide a platform where people can make a difference by contributing to important causes.</p>
+            <p>Through our crowdfunding platform, we ensure that funds go directly to those who need it most, enabling 
+            real change and tangible impact.</p>
+        </div>
+
+        <div class="contact-info">
+            <h2>Contact Us</h2>
+            <p><strong>Email:</strong> Dhruv@nonprofitcrowdfunding.com</p>
+            <p><strong>Phone:</strong> +61123456789</p>
+            <p><strong>Address:</strong> Melbourne, Victoria 3000</p>
+        </div>
 </body>
 </html>
