--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             margin-bottom: 20px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            text-align: center;
         }
         .contact-info p {
             margin: 5px 0;
