--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
             padding: 10px;
             background-color: #007BFF;
             color: white;
+            text-align: center;
         }
         .menu a { 
             margin-right: 15px; 
             text-decoration: none; 
             color: white; 
             font-weight: bold;
+            text-align: center;
         }
         .welcome-section, .contact-info {
             background-color: #ffffff;
