--- a/fundraiser.html
+++ b/fundraiser.html
@@ -11,14 +11,19 @@
             margin: 0;
             padding: 20px;
         }
-        .menu {
-            margin-bottom: 20px;
+        .menu { 
+            margin-bottom: 20px; 
+            padding: 10px;
+            background-color: #007BFF;
+            color: white;
             text-align: center;
         }
-        .menu a {
-            margin-right: 10px;
-            text-decoration: none;
-            color: #007BFF;
+        .menu a { 
+            margin-right: 15px; 
+            text-decoration: none; 
+            color: white; 
+            font-weight: bold;
+            text-align: center;
         }
         .fundraiser-container {
             background-color: #fff;
