--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </div>
 
     <script>
-        fetch('http://localhost:3000/fundraisers')  // Assuming the API is hosted locally
+        fetch('http://localhost:3000/fundraisers')  // API hosted
         .then(response => response.json())
         .then(data => {
             const container = document.getElementById('fundraisers');
