--- a/fundraiser.html
+++ b/fundraiser.html
@@ -62,7 +62,7 @@
 
     <div class="menu">
         <a href="index.html">Home</a>
-        <a href="search.html">Search Fundraisers</a>
+        <a href="search.html">Fundraisers</a>
     </div>
 
     <div class="fundraiser-container">
