--- a/fundraiser.html
+++ b/fundraiser.html
@@ -122,7 +122,7 @@
             alert('This feature is under construction.');
         }
 
-        
+        document.addEventListener('DOMContentLoaded', fetchFundraiserDetails);
     </script>
 
 </body>
